Tue Aug  8 14:49:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement do_get_all_keys() for DA and DB databases.  Untested.

Tue Aug  8 12:26:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix potential concurrency problem in big file descriptor stuff:
	  although it was very unlikely to have actually caused a problem.

Mon Aug  7 18:41:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Progress on apitest Python translation.  test_trivial runs.

Mon Aug  7 18:03:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API addition: added OmInvalidOperationError to report invalid
	  API usage, for example, ending a session when one hasn't been
	  begun.

	* API Change: changed OmWritableDatabase considerably, so that it
	  has begin_session() and end_session() methods instead of lock()
	  and unlock() methods, amongst other things.

Fri Aug  4 18:52:56 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split apitest_to_java into the separate packages it contained

	* Started work on the Python apitest module

Fri Aug  4 15:32:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More tests work from Java.  (31 pass)

Fri Aug  4 12:38:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now 25 tests pass in Java, and test_alwaysfail has been disabled.

Fri Aug  4 11:43:00 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed an indexing buglet which caused results of the simplequery2 to
	  be different under Java.  Now 22 pass, 4 fail (including alwaysfail)

Thu Aug  3 17:40:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now 21 tests pass, 5 fail (including alwaysfail) - databases
	  weren't being flushed properly when created.
	
	* ApiTestFuncs.main() now understands some of the normal testsuite
	  command-line options.

Thu Aug  3 14:39:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
